--- a/index.html
+++ b/index.html
@@ -199,16 +199,16 @@
 
           <div class="subheading mb-3">Professional Skills</div>
           <ul class="fa-ul mb-0">
-            <li><i class="fa-li fa fa-check"></i><strong>Programming knowledge :</strong> PHP,Python,JavaScript,C.</li>
-            <li><i class="fa-li fa fa-check"></i><strong>Web development :</strong> HTML, CSS, jQuery, AJAX, Bootstrap, JSON.</li>
+            <li><i class="fa-li fa fa-check"></i><strong>Programming knowledge :</strong> PHP,JavaScript,Java</li>
+            <li><i class="fa-li fa fa-check"></i><strong>Web development :</strong> HTML, CSS, jQuery, AJAX, Bootstrap, JSON,,React.js</li>
             <li><i class="fa-li fa fa-check"></i><strong>API :</strong> REST.</li>
             <li><i class="fa-li fa fa-check"></i><strong>Database knowledge :</strong> MySQL, MariaDB, MongoDB.</li>
-            <li><i class="fa-li fa fa-check"></i><strong>Frameworks :</strong> Laravel, Lumen, Django, Flask, Angular, Vue.</li>
-            <li><i class="fa-li fa fa-check"></i><strong>CMS :</strong> WordPress, Magento.</li>
+            <li><i class="fa-li fa fa-check"></i><strong>Frameworks :</strong> Laravel, Lumen,Vue.js,React Native,Node.js</li>
+            <li><i class="fa-li fa fa-check"></i><strong>CMS :</strong> WordPress</li>
             <li><i class="fa-li fa fa-check"></i><strong>Version control system :</strong> Git, SVN.</li>
-            <li><i class="fa-li fa fa-check"></i><strong>Project management tools :</strong> Jira, Bitbucket, Github, Gitlab.</li>
+            <li><i class="fa-li fa fa-check"></i><strong>Project management tools :</strong>Bitbucket, Github, Gitlab.</li>
             <li><i class="fa-li fa fa-check"></i><strong>Software development :</strong> Scrum.</li>
-            <li><i class="fa-li fa fa-check"></i><strong>Operating system :</strong> Fedora,Ubuntu,Windows.</li>
+            <li><i class="fa-li fa fa-check"></i><strong>Operating system :</strong>Ubuntu,Windows.</li>
             <li><i class="fa-li fa fa-check"></i><strong>FTP :</strong> SSH, Filezilla, Bitvise, Putty.</li>
            <!--  <li><i class="fa-li fa fa-check"></i>Javascript,jQuery</li>
             <li><i class="fa-li fa fa-check"></i>C,PHP,Python</li>
